added buttons/input fields

--- a/index.html
+++ b/index.html
@@ -8,6 +8,32 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <h1>Review App Week 7, Playfair</h1>
+    <div id="inputDiv">
+        <select id="colorIn">
+             <select id="sizeIn">
+             <option>Tiny</option>
+             <option>Small</option>
+             <option>Medium</option>
+             <option>Large</option>   
+             <option>Huge</option>
+             <option>Enormous</option>
+            </select>
+            <option>Red</option>
+            <option>Orange</option>
+            <option>Green</option>
+            <option>Blue</option>   
+            <option>Purple</option>
+            <option>Yellow</option>
+
+        </select>
+        <input type="text" placeholder="name" id="nameIn">
+        <button id="addItemButton">Add Item</button>
+    </div>
+    <div id="outputDiv">
+        <ul id="inventoryOut">
+
+        </ul>
+    </div>
 </body>
 </html>
